--- a/micropolis-java/strings/micropolisj/GuiStrings.properties
+++ b/micropolis-java/strings/micropolisj/GuiStrings.properties
@@ -123,6 +123,8 @@ menu.difficulty.1 = Medium
 menu.difficulty.1.key = M
 menu.difficulty.2 = Hard
 menu.difficulty.2.key = H
+menu.difficulty.3=Super Easy
+menu.difficulty.3.key = S
 
 menu.disasters = Disasters
 menu.disasters.key = D
@@ -171,6 +173,13 @@ menu.help.about.key = A
 !
 ! Tools
 !
+tool.SUBWAY.name			 = SUBWAY
+tool.SUBWAY.icon			 = /icsubway.png
+tool.SUBWAY.selected_icon	 = /icsubwayhi.png
+tool.ICERINK.name            = ICERINK
+tool.ICERINK.icon            = /icIceRink.png
+tool.ICERINK.selected_icon   = /icIceRinkhi.png
+tool.ICERINK.tip             = Our new Icerink
 tool.BULLDOZER.name            = BULLDOZER
 tool.BULLDOZER.icon            = /icdozr.png
 tool.BULLDOZER.selected_icon   = /icdozrhi.png
