- changed package structure - new package engine.subway for SubwayNetork,... - fixed bulldozer bug for SubwayStation - SubwayDialog

--- a/micropolis-java/strings/micropolisj/GuiStrings.properties
+++ b/micropolis-java/strings/micropolisj/GuiStrings.properties
@@ -162,6 +162,8 @@ menu.windows.evaluation = Evaluation
 menu.windows.evaluation.key = E
 menu.windows.graph = Graph
 menu.windows.graph.key = G
+menu.windows.subway = Subway
+menu.windows.subway.key = S
 
 menu.help = Help
 menu.help.key = H
@@ -354,6 +356,7 @@ budgetdlg.funding_level_hdr = Funding Level
 budgetdlg.requested_hdr = Requested
 budgetdlg.allocation_hdr = Paid
 budgetdlg.road_fund = Trans. Fund
+budgetdlg.subway_fund = Subway Fund
 budgetdlg.police_fund = Police Fund
 budgetdlg.fire_fund = Fire Fund
 budgetdlg.continue = Continue With These Figures
@@ -381,3 +384,8 @@ notification.value_lbl = Value:
 notification.crime_lbl = Crime:
 notification.pollution_lbl = Pollution:
 notification.growth_lbl = Growth:
+
+subDlg.msg.maxConnectionExceeded=Maximum number of stations reached.
+subDlg.btn.createConnection=Connect
+subDlg.btn.removeConnection=Remove
+subDlg.btn.ok=OK
