--- a/micropolis-java/.classpath
+++ b/micropolis-java/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="strings"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="lib" path="extlib/hamcrest-library-1.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
